@@ -1,3 +1,8 @@
+1999-04-16  Katsumi Yamaoka   <yamaoka@jpl.org>
+
+	* mime-pgp.el (mime-pgp-detect-version): Bug fix -- save
+	restriction before narrowing.
+
 1999-04-15  Katsumi Yamaoka   <yamaoka@jpl.org>
 
 	* mime-pgp.el (mime-add-application/pgp-keys): Use
